project/src/main/java/at/hocheneder/accproject/parser/SimpleLang.ATG
COMPILER SimpleLang

CHARACTERS
  tab           = '\u0009'. /*  9 = tabulator */
  lf            = '\u000a'. /* 10 = line feed */
  cr            = '\u000d'. /* 13 = carriage return */

  zero          = '0'.
  nonZeroDigit  = "123456789".
  digit         = '0' + nonZeroDigit .
  letter        = 'A' .. 'Z' + 'a' .. 'z' + '_' + '$'.

  char          = ANY - "'" - '\\' - cr - lf.

TOKENS
  ident         = letter { letter | digit }.
  number = (  zero | nonZeroDigit { digit } ).
  charCon =
    "'" ( char
        | "\\" ("b" | "t" | "n" | "f" | "r" | "\"" | "\'" | "\\")
        )
    "'".

COMMENTS FROM "/*" TO "*/"
COMMENTS FROM "//" TO lf

IGNORE lf + cr + tab

/*---------------------------------------------------------------------------*/

PRODUCTIONS


SimpleLang = Declaration {Declaration}.
Declaration = VarDecl | FnDecl.
VarDecl = "var" ident ":" Type ";".
Type = ident.
FnDecl = "fn" ident Parameters "{" {VarDecl} StatSeq "}".
Parameters = "(" [Param {"," Param}] ")" [":" Type].
Param = ident ":" Type.
StatSeq = Statement {Statement}.

Expression<out Operand x> =
    (. AddOp sign = AddOp.Plus; .)
    [Addop<out sign>]
    Term<out x> {Addop<out AddOp op> Term<out Operand y>
    }
.

Statement =
      ident ( "=" Expression<out Operand x> | ActParameters ) ";"
    | "if" "(" Condition<out Operand x> ")" "{" StatSeq "}" {"elseif" "(" Condition<out Operand x> ")" "{" StatSeq "}" } ["else" "{" StatSeq "}"]
    | "while" "(" Condition<out Operand x> ")" "{" StatSeq "}"
    | "return" [Expression<out Operand x>] ";"
.

Condition<out Operand x> =
    Expression<out x>
    Relop<out RelOp op>
    Expression<out Operand y>
.

Term<out Operand x> =
    Factor<out x>
    {Mulop<out MulOp op> Factor<out Operand y> (. /* TODO codegen */ .)
    }.

Factor<out Operand x> =
    ident           (. /* TODO variables/function */ .)
        [ActParameters]
    | number        (. x = new Operand(t.numVal;); .)
    | charCon       (. x = new Operand((char) t.numVal;); .)
    | "(" Expression<out x> ")".

ActParameters = "(" [Expression<out Operand x> {"," Expression<out Operand y>}] ")" (. /* TODO method call */ .).

Relop<out RelOp op> =
    "="     (. op = RelOp.Equals; .)
    | "#"   (. op = RelOp.NotEquals; .)
    | "<"   (. op = RelOp.Less; .)
    | ">"   (. op = RelOp.Greater; .)
    | ">="  (. op = RelOp.GreaterEquals; .)
    | "<="  (. op = RelOp.LessEquals; .)
    .

Addop<out AddOp op> =
    "+"     (. op = AddOp.Plus; .)
    | "-"   (. op = AddOp.Minus; .)
    .

Mulop<out MulOp op> =
    "*"     (. op = MulOp.Times; .)
    | "/"   (. op = MulOp.Divide; .)
    | "%"   (. op = MulOp.Modulo; .)
    .


END SimpleLang.
